# FaceTest

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tourcoo/facetest/: DetecterActivity.java  MainActivity.java  MyApplication.java  PermissionAcitivity.java
app/src/main/java/com/tourcoo/facetest/utils/: DebugUtil.java  FaceDB.java  FaceDetect.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
